Fixes field error message covering up the label.

--- a/tool-ui/src/main/webapp/style/views.less
+++ b/tool-ui/src/main/webapp/style/views.less
@@ -502,6 +502,14 @@ figure,
         margin-bottom: 5px;
     }
 
+    .message-error {
+        margin-left: 145px;
+
+        @media @media-tablet {
+            margin-left: 0;
+        }
+    }
+
     &.state-changed {
         > .inputLabel {
             background-color: #ed9;
